--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <title>MFE Host Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <script src="/env-config.js"></script>
   </head>
   <body>
     <div id="root"></div>
